--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -56,27 +56,6 @@
             overflow: hidden;
         }
 
-        /* Privacy Overlay */
-        .image-item::after {
-            content: "No Screenshots Allowed";
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.7);
-            color: white;
-            font-size: 1.5rem;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            visibility: hidden; /* Initially hidden */
-        }
-
-        .image-item:hover::after {
-            visibility: visible; /* Display on hover */
-        }
-
         .image-item img {
             width: 100%;
             height: 100%;
@@ -145,66 +124,37 @@
         /* Mobile Responsiveness */
         @media (max-width: 768px) {
             .image-item {
-                width: 45vw; /* Adjust width for medium screens */
-                height: 45vw; /* Same height */
+                width: 40vw; /* Adjusted width for medium screens */
+                height: 40vw; /* Same height */
                 max-width: 200px;
                 max-height: 200px;
-            }
-
-            .navbar-custom {
-                padding-left: 1vw;
-                padding-right: 1vw;
-            }
-
-            .modal-content img {
-                width: 80%; /* Ensures images fit well on mobile screens */
-                height: auto;
-            }
-
-            .modal-close {
-                font-size: 24px; /* Smaller close button */
-            }
-
-            .modal-nav {
-                font-size: 24px; /* Smaller navigation buttons */
             }
         }
 
         @media (max-width: 480px) {
             .image-item {
-                width: 50vw; /* Adjust width for smaller screens */
+                width: 50vw; /* Adjusted width for smaller screens */
                 height: 50vw; /* Same height */
                 max-width: 150px;
                 max-height: 150px;
             }
+        }
 
-            .navbar-custom {
-                padding-left: 2vw;
-                padding-right: 2vw;
-            }
-
-            .modal-content img {
-                width: 90%; /* Ensures better fit for smaller screens */
-                height: auto;
-            }
-
-            .modal-close {
-                font-size: 20px;
-            }
-
-            .modal-nav {
-                font-size: 20px;
-            }
+        .caption {
+            position: absolute;
+            bottom: 10px;
+            left: 0;
+            right: 0;
+            text-align: center;
+            color: white;
+            font-size: 1rem;
+            background-color: rgba(0, 0, 0, 0.5);
+            padding: 5px;
         }
 
         /* Prevent image drag */
         img {
             user-drag: none;
-        }
-
-        /* Disable right-click and image dragging */
-        img {
-            pointer-events: none; /* Disable interaction with images */
         }
     </style>
 </head>
@@ -239,31 +189,9 @@
     <h1 style="text-align:center; font-size: 2rem;">Image Gallery</h1>
  
     <div class="image-gallery-container">
-        <h4 style="text-align:center; font-size: 1rem; color: red;">Vist of Prof Muhammad Suliman Siyal Director College Education Shaheed benazir Abad Region<br>7-3-25</h4>
+        <h4 style="text-align:center; font-size: 1rem; color: red;">Visit of Prof Muhammad Suliman Siyal Director College Education Shaheed Benazirabad Region<br>7-3-25</h4>
         <div class="image-gallery">
-            <!-- First set of images -->
-            <div class="image-item" onclick="openModal(0)">
-                <img src="./gallery/SB1.jpg" alt="Image 1">
-                <div class="caption">Image 1 Caption</div>
-            </div>
-            <div class="image-item" onclick="openModal(1)">
-                <img src="./gallery/SB2.jpg" alt="Image 2">
-            </div>
-            <div class="image-item" onclick="openModal(2)">
-                <img src="./gallery/SB3.jpg" alt="Image 3">
-            </div>
-            <div class="image-item" onclick="openModal(3)">
-                <img src="./gallery/SB4.jpg" alt="Image 4">
-            </div>
-             <div class="image-item" onclick="openModal(4)">
-                <img src="./gallery/SB5.jpg" alt="Image 5">
-            </div>
-             <div class="image-item" onclick="openModal(5)">
-                <img src="./gallery/SB6.jpg" alt="Image 6">
-            </div>
-             <div class="image-item" onclick="openModal(6)">
-                <img src="./gallery/SB7.jpg" alt="Image 7">
-            </div>
+            <!-- Image Items Here -->
         </div>
     </div>
 
@@ -284,9 +212,7 @@
             { src: "./gallery/SB2.jpg", caption: "Caption for Image 2" },
             { src: "./gallery/SB3.jpg", caption: "Caption for Image 3" },
             { src: "./gallery/SB4.jpg", caption: "Caption for Image 4" },
-            { src: "./gallery/SB5.jpg", caption: "Caption for Image 5" },
-            { src: "./gallery/SB6.jpg", caption: "Caption for Image 6" },
-            { src: "./gallery/SB7.jpg", caption: "Caption for Image 7" }
+            // More image objects...
         ];
 
         function openModal(index) {
@@ -325,7 +251,7 @@
             }
         });
 
-        // Disable right-click to prevent image downloads
+        // Disable right-click and drag on images
         document.querySelectorAll('img').forEach(image => {
             image.addEventListener('contextmenu', (event) => {
                 event.preventDefault();
@@ -336,16 +262,9 @@
                 event.preventDefault();
             });
         });
-
-        // Disable keyboard shortcuts for screenshots (Common ones like PrintScreen, etc.)
-        window.addEventListener("keydown", (e) => {
-            if (e.key === "PrintScreen" || e.ctrlKey && (e.key === "s" || e.key === "S" || e.key === "c" || e.key === "C")) {
-                e.preventDefault();
-                alert("Screenshots and downloads are disabled.");
-            }
-        });
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
