--- a/index.html
+++ b/index.html
@@ -1,39 +1,352 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body, html { height: 100%; font-family: Arial, sans-serif; display: flex; }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Government Girls College</title>
+    <!-- Link to Bootstrap CSS (CDN) -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome Icons CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        /* Global Styles */
+        body {
+            font-size: 1rem;
+            line-height: 1.2;
+            margin: 0;
+            padding: 0;
+            background: #E0FFFF;
+            font-family: Arial, sans-serif;
+        }
 
-    /* Left container (image sliding) */
-    .left-container { position: relative; width: 50%; height: 100vh; }
-    .left-container img { position: absolute; animation: slide 5s infinite; width: 100%; height: auto; }
+        .navbar-custom {
+            background-color: #FFF8DC;
+        }
 
-    /* Right container (text walking) */
-    .right-container { position: relative; width: 50%; height: 100vh; overflow: hidden; }
-    .right-container p { position: absolute; bottom: -100%; animation: walk 5s infinite; font-size: 2vw; }
+        .navbar a:hover {
+            background-color: #9b1d38;
+            border-radius: 0.25rem;
+        }
 
-    /* Sliding image animation */
-    @keyframes slide {
-      0% { left: -100%; }
-      100% { left: 100%; }
-    }
+        .container {
+            display: flex;
+            justify-content: space-between;
+            padding: 10px;
+            flex-direction: column;
+            align-items: center;
+        }
 
-    /* Walking text animation */
-    @keyframes walk {
-      0% { bottom: -100%; }
-      100% { bottom: 100%; }
-    }
-  </style>
+        /* Left side - Image Gallery */
+        .left-side {
+            width: 100%;
+            max-width: 800px;
+            background-color: #fff;
+            padding: 5px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+            position: relative;
+            height: 450px;
+        }
+
+        .gallery {
+            display: flex;
+            transition: transform 0.5s ease-in-out;
+            width: 100%;
+        }
+
+        .gallery img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 10px;
+        }
+
+        .nav-btn {
+            position: absolute;
+            top: 50%;
+            background-color: rgba(0, 0, 0, 0.5);
+            color: white;
+            padding: 20px;
+            border: none;
+            cursor: pointer;
+            font-size: 18px;
+            transform: translateY(-50%);
+        }
+
+        .prev-btn {
+            left: 10px;
+        }
+
+        .next-btn {
+            right: 10px;
+        }
+
+        /* Right side - Scrolling Paragraph */
+        .right-side {
+            width: 100%;
+            max-width: 800px;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            position: relative;
+            height: 450px;
+            overflow: hidden;
+        }
+
+        .scroll-paragraph {
+            position: absolute;
+            top: 100%;
+            animation: scroll-up 14s linear infinite;
+            font-size: 18px;
+            color: #333;
+            line-height: 1.4;
+        }
+
+        @keyframes scroll-up {
+            0% {
+                top: 100%;
+            }
+            50% {
+                top: -50%;
+            }
+            100% {
+                top: -100%;
+            }
+        }
+
+        .scroll-paragraph-2 {
+            position: absolute;
+            top: 100%;
+            animation: scroll-up-2 14s linear infinite;
+            animation-delay: 10s;
+            font-size: 18px;
+            color: #333;
+            line-height: 1.4;
+        }
+
+        @keyframes scroll-up-2 {
+            0% {
+                top: 100%;
+            }
+            50% {
+                top: -50%;
+            }
+            100% {
+                top: -100%;
+            }
+        }
+
+        @media (min-width: 768px) {
+            .container {
+                flex-direction: row;
+            }
+            .right-side, .left-side {
+                width: 48%;
+            }
+        }
+
+        /* For Mobile View */
+        @media (max-width: 768px) {
+            .container {
+                flex-direction: column-reverse;
+            }
+
+            .right-side, .left-side {
+                width: 100%;
+                margin-bottom: 20px;
+            }
+
+            .nav-btn {
+                font-size: 14px;
+            }
+
+            .scroll-paragraph, .scroll-paragraph-2 {
+                font-size: 16px;
+            }
+        }
+
+        .second-image {
+            width: 80%;
+            max-width: 100%;
+            height: auto;
+            padding: 1rem;
+            margin: 0 auto;
+            display: block;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .footer-grid {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 2rem;
+        }
+
+        footer {
+            background-color: #ffffff;
+            color: #333;
+            padding: 2rem 0;
+            box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
+            margin-top: auto;
+            text-align: center;
+        }
+
+        footer .container {
+            width: 90%;
+            margin: 0 auto;
+            max-width: 1200px;
+        }
+
+        footer h2 {
+            font-size: 1.25rem;
+            font-weight: 600;
+            color: #333;
+            margin-bottom: 1rem;
+        }
+
+        footer ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        footer ul li {
+            margin-bottom: 0.75rem;
+        }
+
+        footer a {
+            text-decoration: none;
+            color: #666;
+            font-size: 1rem;
+            transition: color 0.3s ease;
+        }
+
+        footer a:hover {
+            color: #007BFF;
+        }
+
+    </style>
 </head>
 <body>
-  <div class="left-container">
-    <img src="./gallery/aa1.jpg" alt="Sliding Image">
-  </div>
-  <div class="right-container">
-    <p>Walking Text from bottom to top.</p>
-  </div>
+
+    <!-- Left Side - College Heading -->
+    <div class="col-auto">
+        <h5 style="color: red; padding-left: 1.8em;">GOVERNMENT GIRLS COLLEGE<br> DAULATPUR</h5>
+    </div>
+
+    <!-- Bootstrap Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light navbar-custom p-2 w-100">
+        <div class="container-fluid">
+            <a class="navbar-brand text-black" href="Government-Girls-College-Daulatpur.html">Govt Girls College Daulatpur</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link text-black active" aria-current="page" href="index.html">HOME</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-black" href="ONLINE-TEST.html">ONLINE TEST</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-black" href="Government-Girls-College-Daulatpur.html">GALLERY</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-black" href="ABOUT-US.html">ABOUT</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-black" href="CONTACT-US.html">CONTACT US</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div class="container">
+        <!-- Left Side - Image Gallery (Slideshow) -->
+        <div class="left-side">
+            <div class="gallery">
+                <img src="./gallery/aa1.jpg" alt="Image 1">
+                <img src="./gallery/SB5.jpg" alt="Image 2">
+                <img src="./gallery/SB7.jpg" alt="Image 3">
+                <img src="./gallery/SB8.jpg" alt="Image 4">
+                <img src="./gallery/22.jpg" alt="Image 5">
+                <img src="./gallery/33.jpg" alt="Image 6">
+            </div>
+            <button class="nav-btn prev-btn" onclick="moveSlide(-1)">&#10094;</button>
+            <button class="nav-btn next-btn" onclick="moveSlide(1)">&#10095;</button>
+        </div>
+
+        <!-- Right Side - Scrolling Paragraph -->
+        <div class="right-side">
+            <div style="display: flex; justify-content: space-between; align-items: center;">
+                <a href="Notice.html" style="font-size: 30px; text-decoration: none;">VIEW ALL</a>
+                <img src="https://pu.edu.pk/images/News/a-new.gif" style="width:80px; height:auto;">
+            </div>
+
+            <div class="scroll-paragraph">
+                <p>it is hereby notified that <br>
+                    the pre-board examinations in our college will begin on Wednesday 26th March...</p>
+            </div>
+
+            <div class="scroll-paragraph-2">
+                <p>it is hereby notified that <br>
+                    the pre-board examinations in our college will begin on Wednesday 26th March...</p>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <div class="container">
+            <div class="footer-grid">
+                <div>
+                    <h2>About</h2>
+                    <ul>
+                        <li><a href="CONTACT-US.html" target="_self">Contact</a></li>
+                        <li><a href="Government-Girls-College-Daulatpur.html" target="_self">GGC, Daulatpur</a></li>
+                        <li><a href="COLLEGE.html" target="_self">College</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h2>Universities Links</h2>
+                    <ul>
+                        <li><a href="https://www.sbbusba.edu.pk/" target="_self">Shaheed Benazir Bhutto University</a></li>
+                        <li><a href="https://pumhs.edu.pk/" target="_self"> PUMHS University</a></li>
+                        <li><a href="https://quest.edu.pk/" target="_self"> QUAID-E-AWAM UNIVERSITY</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <p style="color: red;">&copy; 2025 Government Girls College Daulatpur All rights reserved.</p>
+    </footer>
+
+    <script>
+        let currentIndex = 0;
+        const images = document.querySelectorAll(".gallery img");
+
+        function moveSlide(step) {
+            currentIndex += step;
+            if (currentIndex < 0) {
+                currentIndex = images.length - 1;
+            }
+            if (currentIndex >= images.length) {
+                currentIndex = 0;
+            }
+            updateGallery();
+        }
+
+        function updateGallery() {
+            const offset = -currentIndex * 100;
+            document.querySelector(".gallery").style.transform = `translateX(${offset}%)`;
+        }
+
+        setInterval(() => {
+            moveSlide(1);
+        }, 5000);
+    </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
