--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Government Girls College</title>
-    <!-- Link to Bootstrap CSS (CDN) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font Awesome Icons CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         /* Global Styles */
@@ -16,7 +14,6 @@
             margin: 0;
             padding: 0;
             background: #E0FFFF;
-            font-family: Arial, sans-serif;
         }
 
         .navbar-custom {
@@ -42,7 +39,7 @@
             max-width: 800px;
             background-color: #fff;
             padding: 5px;
-            border-radius: 10px;
+            border-radius: 2px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             overflow: hidden;
             position: relative;
@@ -58,10 +55,11 @@
         .gallery img {
             width: 100%;
             height: 100%;
-            object-fit: cover;
-            border-radius: 10px;
+            object-fit: cover;  /* Ensures that images fill the container while maintaining aspect ratio */
+            border-radius: 2px;
         }
 
+        /* Navigation Buttons for Slideshow */
         .nav-btn {
             position: absolute;
             top: 50%;
@@ -88,20 +86,21 @@
             max-width: 800px;
             background-color: #fff;
             padding: 20px;
-            border-radius: 10px;
+            border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             position: relative;
             height: 450px;
             overflow: hidden;
         }
 
+        /* Scrolling Paragraph */
         .scroll-paragraph {
             position: absolute;
             top: 100%;
             animation: scroll-up 14s linear infinite;
             font-size: 18px;
             color: #333;
-            line-height: 1.4;
+            line-height: 1.0;
         }
 
         @keyframes scroll-up {
@@ -123,7 +122,7 @@
             animation-delay: 10s;
             font-size: 18px;
             color: #333;
-            line-height: 1.4;
+            line-height: 1.0;
         }
 
         @keyframes scroll-up-2 {
@@ -138,12 +137,14 @@
             }
         }
 
+        /* Responsive Design - Flexbox adjustment for larger screens */
         @media (min-width: 768px) {
             .container {
                 flex-direction: row;
             }
             .right-side, .left-side {
                 width: 48%;
+                margin-bottom: 1rem;
             }
         }
 
@@ -167,23 +168,13 @@
             }
         }
 
-        .second-image {
-            width: 80%;
+        /* Make the image responsive on all devices */
+        .img-fluid {
             max-width: 100%;
             height: auto;
-            padding: 1rem;
-            margin: 0 auto;
-            display: block;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
-        .footer-grid {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 2rem;
-        }
-
+        /* Footer styles */
         footer {
             background-color: #ffffff;
             color: #333;
@@ -226,16 +217,41 @@
             color: #007BFF;
         }
 
+        .social-icons a {
+            margin-right: 1rem;
+            font-size: 1.25rem;
+            color: #666;
+            transition: color 0.3s ease;
+        }
+
+        .social-icons a:hover {
+            color: #007BFF;
+        }
+
+        .footer-grid {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 2rem;
+        }
+
+        .footer-grid > div {
+            display: flex;
+            flex-direction: column;
+        }
+
+        @media (max-width: 480px) {
+            footer .container {
+                padding: 0 1rem;
+            }
+        }
     </style>
 </head>
-<body>
+<body class="bg-gradient-to-br from-teal-300 via-indigo-200 to-blue-300">
 
-    <!-- Left Side - College Heading -->
     <div class="col-auto">
         <h5 style="color: red; padding-left: 1.8em;">GOVERNMENT GIRLS COLLEGE<br> DAULATPUR</h5>
     </div>
 
-    <!-- Bootstrap Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light navbar-custom p-2 w-100">
         <div class="container-fluid">
             <a class="navbar-brand text-black" href="Government-Girls-College-Daulatpur.html">Govt Girls College Daulatpur</a>
@@ -244,28 +260,18 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link text-black active" aria-current="page" href="index.html">HOME</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-black" href="ONLINE-TEST.html">ONLINE TEST</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-black" href="Government-Girls-College-Daulatpur.html">GALLERY</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-black" href="ABOUT-US.html">ABOUT</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-black" href="CONTACT-US.html">CONTACT US</a>
-                    </li>
+                    <li class="nav-item"><a class="nav-link text-black active" href="index.html">HOME</a></li>
+                    <li class="nav-item"><a class="nav-link text-black" href="ONLINE-TEST.html">ONLINE TEST</a></li>
+                    <li class="nav-item"><a class="nav-link text-black" href="Government-Girls-College-Daulatpur.html">GALLERY</a></li>
+                    <li class="nav-item"><a class="nav-link text-black" href="ABOUT-US.html">ABOUT</a></li>
+                    <li class="nav-item"><a class="nav-link text-black" href="CONTACT-US.html">CONTACT US</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
     <div class="container">
-        <!-- Left Side - Image Gallery (Slideshow) -->
+        <!-- Left Side - Image Gallery -->
         <div class="left-side">
             <div class="gallery">
                 <img src="./gallery/aa1.jpg" alt="Image 1">
@@ -285,15 +291,11 @@
                 <a href="Notice.html" style="font-size: 30px; text-decoration: none;">VIEW ALL</a>
                 <img src="https://pu.edu.pk/images/News/a-new.gif" style="width:80px; height:auto;">
             </div>
-
             <div class="scroll-paragraph">
-                <p>it is hereby notified that <br>
-                    the pre-board examinations in our college will begin on Wednesday 26th March...</p>
+                <p>It is hereby notified that the pre-board examinations in our college will begin on Wednesday, 26th March...</p>
             </div>
-
             <div class="scroll-paragraph-2">
-                <p>it is hereby notified that <br>
-                    the pre-board examinations in our college will begin on Wednesday 26th March...</p>
+                <p>It is hereby notified that the pre-board examinations in our college will begin on Wednesday, 26th March...</p>
             </div>
         </div>
     </div>
@@ -304,22 +306,22 @@
                 <div>
                     <h2>About</h2>
                     <ul>
-                        <li><a href="CONTACT-US.html" target="_self">Contact</a></li>
-                        <li><a href="Government-Girls-College-Daulatpur.html" target="_self">GGC, Daulatpur</a></li>
-                        <li><a href="COLLEGE.html" target="_self">College</a></li>
+                        <li><a href="CONTACT-US.html">Contact</a></li>
+                        <li><a href="Government-Girls-College-Daulatpur.html">GGC, Daulatpur</a></li>
+                        <li><a href="COLLEGE.html">College</a></li>
                     </ul>
                 </div>
                 <div>
                     <h2>Universities Links</h2>
                     <ul>
-                        <li><a href="https://www.sbbusba.edu.pk/" target="_self">Shaheed Benazir Bhutto University</a></li>
-                        <li><a href="https://pumhs.edu.pk/" target="_self"> PUMHS University</a></li>
-                        <li><a href="https://quest.edu.pk/" target="_self"> QUAID-E-AWAM UNIVERSITY</a></li>
+                        <li><a href="https://www.sbbusba.edu.pk/">Shaheed Benazir Bhutto University</a></li>
+                        <li><a href="https://pumhs.edu.pk/">PUMHS University</a></li>
+                        <li><a href="https://quest.edu.pk/">QUAID-E-AWAM UNIVERSITY</a></li>
                     </ul>
                 </div>
             </div>
         </div>
-        <p style="color: red;">&copy; 2025 Government Girls College Daulatpur All rights reserved.</p>
+        <p>&copy; 2025 Government Girls College Daulatpur. All rights reserved.</p>
     </footer>
 
     <script>
